--- a/SupportBank.Console/packages.config
+++ b/SupportBank.Console/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CsvHelper" version="27.2.1" targetFramework="net452" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net452" />
+  <package id="NLog" version="5.0.1" targetFramework="net452" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
   <package id="System.Memory" version="4.5.0" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net452" />
