--- a/SupportBank.Console/packages.config
+++ b/SupportBank.Console/packages.config
@@ -3,6 +3,7 @@
   <package id="CsvHelper" version="27.2.1" targetFramework="net452" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net452" />
   <package id="NLog" version="5.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net452" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
   <package id="System.Memory" version="4.5.0" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net452" />
